--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -17,13 +17,13 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --headline-color-on-color: #f4f0bb; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #87c38f; /* paragraph text on a colored background */ 
   --paragraph-background-color: #226f54  ;
-  --nav-link-color: white;
+  --nav-link-color: #f4f0bb;
   --nav-background-color: #226f54;
-  --nav-hover-link-color: white;
+  --nav-hover-link-color: #f4f0bb;
   --nav-hover-background-color: #87c38f;
 }
 
