general changes to understanding

--- a/understanding/styles/styles.css
+++ b/understanding/styles/styles.css
@@ -17,10 +17,18 @@ img {
     width: 800px;
     border: 4px solid rgb(10, 48, 80);
 }
+.main-para {
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
 p {
     padding: 10px;
 }
 footer {
     background-color: rgb(10, 48, 80);
     color: white;
+}
+#active {
+    background-color: white;
+    color: steelblue;
 }
