--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -11,6 +11,7 @@ a {
 }
 h1 {
     text-align: center;
+    margin: 50px 0;
 }
 nav, footer {
     background-color: steelblue;
@@ -21,6 +22,7 @@ nav, footer {
 footer p {
     font-size: 20px;
     margin: 20px auto;
+    padding: 25px;
 }
 main p {
     width: 80%;
