--- a/understanding/styles/styles.css
+++ b/understanding/styles/styles.css
@@ -1,21 +1,24 @@
 body {
     text-align: center;
     background-color: rgb(191, 239, 248);
+    margin: 0;
 }
 nav {
-    background-color: rgb(10, 48, 80);
-    padding: 10px;
+    background-color: steelblue;
+    padding: 25px;
 }
 a {
     color: white;
     margin: 40px;
+    padding: 25px;
 }
 h1 {
     color: rgb(10, 48, 80);
+    margin: 50px 0;
 }
 img {
     width: 800px;
-    border: 4px solid rgb(10, 48, 80);
+    border: 4px solid steelblue;
 }
 .main-para {
     font-size: 1.5em;
@@ -25,10 +28,13 @@ p {
     padding: 10px;
 }
 footer {
-    background-color: rgb(10, 48, 80);
+    background-color:steelblue;
     color: white;
 }
 #active {
     background-color: white;
     color: steelblue;
+}
+footer p {
+    padding: 25px;
 }
