--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,10 +6,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #f4f0bb   ;
-  --secondary-color: #87c38f ;
-  --accent1-color: #da2c38;
-  --accent2-color: #226f54;
+  --primary-color: #464655   ;
+  --secondary-color: #94958b ;
+  --accent1-color: #d5cfe1;
+  --accent2-color: #eddfef;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Covered By Your Grace";
@@ -17,14 +17,14 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: #f4f0bb; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #87c38f; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #226f54  ;
-  --nav-link-color: #f4f0bb;
-  --nav-background-color: #226f54;
-  --nav-hover-link-color: #f4f0bb;
-  --nav-hover-background-color: #87c38f;
+  --headline-color-on-color: #d5cfe1; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #eddfef; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #94958b; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #464655  ;
+  --nav-link-color: #d5cfe1;
+  --nav-background-color: #464655;
+  --nav-hover-link-color: #d5cfe1;
+  --nav-hover-background-color: #94958b;
 }
 
 
