--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -5,6 +5,8 @@
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 nav a {
     text-align: center;
@@ -12,11 +14,35 @@ nav a {
     text-decoration: none;
     padding: 35px;
 }
-#hero-msg h1, #hero-msg h4 {
+#hero {
+    display: grid;
+    grid-template-columns: repeat(5. 1fr);
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
     text-align: center;
+    color: #eddfef;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h4, #hero-msg h1 {
+    color: #d5cfe1;
+}
+#hero-img {
+    width: 100%;
 }
 .button-box {
     text-align: center;
+}
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr)
 }
 main section {
     text-align: center;
@@ -28,6 +54,8 @@ main section img {
     height: 725px;
     background-color: #eddfef;
     margin: 150px 0;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body {
     background-color: #d5cfe1;
@@ -38,23 +66,50 @@ body {
 }
 header {
     background-color: #464655;
+    opacity: 80%;
     color: #eddfef;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 nav a:hover {
     background-color: #94958b;
 }
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
 footer a:hover {
     background-color: #464655;
 }
-.rivers-card, .camping-card, .rapids-card {
+.rivers-card {
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 .card-img {
     border: 10px solid #464655;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #94958b;
 }
 .book {
     color: #eddfef;
     background-color: #464655;
+    opacity: 90%;
     text-decoration: none;
     font-size: 18px;
     padding: 15px 30px;
@@ -81,6 +136,9 @@ footer a:hover {
     color: #d5cfe1;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #94958b;
 }
 .msg p {
     font-size: 0.8em;
@@ -93,7 +151,10 @@ footer a:hover {
     margin-top: 10px;
 }
 .mountains {
-    padding-bottom: 250px;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #464655;
 }
 h4 {
     color: #464655;
@@ -112,9 +173,6 @@ h2 {
     width: 80px;
     padding-top: 10px;
 }
-#hero-img {
-    width: 100%;
-}
 footer p {
     font-size: 1.2em;
 }
@@ -126,6 +184,9 @@ footer {
     color: #eddfef;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer .social img {
     padding-top: 15px;
@@ -136,4 +197,45 @@ footer a {
 }
 footer .social img {
     padding-top: 15px;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
