--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -16,7 +16,7 @@ nav a {
 }
 #hero {
     display: grid;
-    grid-template-columns: repeat(5. 1fr);
+    grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
 }
 #hero-box {
@@ -53,7 +53,7 @@ main section img {
 #background {
     height: 725px;
     background-color: #eddfef;
-    margin: 150px 0;
+    margin: 80px 0;
     grid-column: 1/11;
     grid-row: 4/9;
 }
@@ -86,17 +86,17 @@ footer a:hover {
     background-color: #464655;
 }
 .rivers-card {
-    margin: 200px 0;
+    margin: 100px 0;
     grid-column: 2/4;
     grid-row: 2/3;
 }
 .camping-card {
-    margin: 200px 0;
+    margin: 100px 0;
     grid-column: 5/7;
     grid-row: 2/3;
 }
 .rapids-card {
-    margin: 200px 0;
+    margin: 100px 0;
     grid-column: 8/10;
     grid-row: 2/3;
 }
@@ -104,7 +104,7 @@ footer a:hover {
     border: 10px solid #464655;
     width: 100%;
     transition: transform .5s;
-    box-shadow: 5px 5px 10px #94958b;
+    box-shadow: 5px 5px 10px #464655;
 }
 .book {
     color: #eddfef;
@@ -115,6 +115,7 @@ footer a:hover {
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .join {
     color: #94958b;
@@ -124,6 +125,7 @@ footer a:hover {
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .book:hover {
     background-color: #94958b;
