--- a/askus/styles/site-plan.css
+++ b/askus/styles/site-plan.css
@@ -18,7 +18,7 @@ Fonts are separated by a | */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #2081c3;  /* headlines on a white background */ 
   --headline-color-on-color: #f7f9f9; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #2081c3; /* paragraph text on a white background */ 
+  --paragraph-color: #2081c3; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #f7f9f9; /* paragraph text on a colored background */ 
   --paragraph-background-color: #2081c3  ;
   --nav-link-color: #2081c3;
