--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -256,7 +256,7 @@ footer .social img {
 .rivers-grid {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
 }
 
 main section {
@@ -264,52 +264,52 @@ main section {
 }
 
 .salmon-card {
-    margin: 100px 30px;
-    grid-column: 6/10;
+    margin: 80px 30px 30px 50px;
+    grid-column: 6/11;
     grid-row: 1/2;
 
 }
 .desolation-card {
-    margin: 60px 50px 0px 150px;
-    grid-column: 2/6;
+    margin: 30px 50px 30px 150px;
+    grid-column: 1/6;
     grid-row: 2/3;
 }
 .grand-card {
-    margin: 30px 50px 0px 50px;
-    grid-column: 6/10;
+    margin: 50px 30px 0px 50px;
+    grid-column: 6/11;
     grid-row: 3/4;
 }
 
 .left-img1 {
     border: 6px solid #464655;
-    width: 80%;
+    width: 100%;
     box-shadow: 5px 5px 10px #464655;
-    margin: 100px 40px 30px 150px;
-    grid-column: 2/6;
+    margin: 120px 40px 0px 150px;
+    grid-column: 1/5;
     grid-row: 1/2;
 }
 
 .right-img {
     border: 4px solid #464655;
-    width: 80%;
+    width: 100%;
     box-shadow: 5px 5px 10px #464655;
     grid-column: 6/10;
     grid-row: 2/3;
-    margin: 0px 100px 0px 40px;
+    margin: 40px 100px 30px 40px;
 }
 
 .left-img2 {
-    border: 4px solid #464655;
-    width: 80%;
+    border: 6px solid #464655;
+    width: 100%;
     box-shadow: 5px 5px 10px #464655;
-    margin: 30px 40px 0px 150px;
-    grid-column: 2/6;
+    margin: 60px 40px 0px 150px;
+    grid-column: 1/5;
     grid-row: 3/4;
 }
 
 .text1 {
     text-align: left;
-    margin-right: 100px;
+    margin-right: 40px;
 }
 
 .text2 {
