--- a/askus/styles/site-plan.css
+++ b/askus/styles/site-plan.css
@@ -160,6 +160,11 @@ nav a:hover {
   background-color: #ccc;
   line-height: 3em;
 }
+.sm-page4 {
+  grid-area: page4;
+  background-color: #ccc;
+  line-height: 3em;
+}
 
 .top {
   grid-area: top;
@@ -170,6 +175,12 @@ nav a:hover {
   grid-area: left;
   border-top: 1px solid;
   border-left: 1px solid;
+}
+
+.center {
+  grid-area: center;
+  border-top: 1px solid;
+  border-right: 1px solid;
 }
 
 .right {
