--- a/askus/styles/styles.css
+++ b/askus/styles/styles.css
@@ -1,7 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Rubik&display=swap');
-#content {
-    max-width: 1456px;
-    margin: 0 auto;
+
+body {
+    font-family: Rubik(--paragraph-font);
+    font-size: 16px;
+    color: var(--accent3-color);
+}
+
+h2, h3, h4, h5, h6 {
+    font-family: Montserrat(--heading-font);
+    font-weight: 700;
+}
+
+h1 {
+    font-family: Montserrat(--heading-font);
+    font-size: 1.5em;
+}
+
+h2, h3 {
+    font-size: 1.2em;
+}
+
+h4, h5, h6 {
+    font-size: 1.5em;
 }
 
 .sidenav {
@@ -34,7 +54,7 @@
   .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
-    font-family: Rubik;
+    font-family: Rubik, Helvetica, sans-serif;
     font-size: 25px;
     color: #f7f9f9;
     display: block;
@@ -56,11 +76,11 @@
     .sidenav a {font-size: 18px;}
   }
 
-  #hero {
+#hero {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    margin-top: -100px;
+    margin-top: -10px;
 }
 
 #hero-box {
@@ -71,22 +91,27 @@
 #hero-msg {
     text-align: right;
     color: #2081c3;
-    grid-column: 1/4;
+    grid-column: 2/5;
     grid-row: 2/3;
-    margin-top: 20%;
-    margin-right: 4%;
+    margin-top: 10%;
+    margin-left: 0;
     font-size: 2em;
 }
 
 #hero-img {
-    width: 100%;
+    width: 200%;
+    grid-column: 1/5;
     background-color: #78d5d7;
     border-radius: 8px;
     box-shadow: 5px 5px 10px #6f7364;
+    position: relative;
 }
+
 .button-box {
-    margin-right: 16%;
-    margin-top: -18%;
+    grid-column: 4/5;
+    grid-row: 2/3;
+    margin-left: 30%;
+    margin-top: 20%;
 }
 .start {
     color: #f7f9f9;
@@ -94,7 +119,7 @@
     opacity: 90%;
     text-decoration: none;
     font-size: 40px;
-    font-family: Rubik;
+    font-family: Rubik, Helvetica, sans-serif;
     letter-spacing: 3px;
     padding: 10px 20px;
     margin-top: 40px;
@@ -107,38 +132,196 @@
 
 .home-grid {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
 }
 
 .reading {
     border: 6px solid #78d5d7;
-    width: 100%;
+    width: 200%;
     box-shadow: 5px 5px 10px #2081c3;
     border: 40px 40px;
-    margin: 60px 30px 60px 100px;    
+    margin: 50px 30px 60px 80px;    
 }
 
 .reading-pic {
-    font-family: Montserrat;
+    font-family: Montserrat, Helvetica, sans-serif;
     margin-top: 10%;
-    grid-column: 2/4;
-    margin: 40px 100px;
+    grid-column: 3/5;
+    margin: 50px 40px 20px 10px;
 }
 .subtitle {
     color: #2081c3;
     text-align: left;
-    margin: 40px 100px 0% 100px; 
+    margin: 40px 100px 0% 140px; 
 }
 .text1 {
     text-align: left;
-    margin: 20px 30px 30px 100px; 
+    margin: 20px 30px 30px 140px; 
+}
+
+
+
+/* From here, it starts the "Why Ask Us? page" css*/
+
+.hero_why {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.container {
+    margin: auto;
+    background-color: #bed8d4;
+    width: 800px;
+    padding: 30px;
+}
+
+.slider {
+    position: relative;
+    width: 800px;
+    height: 530px;
+}
+
+.slideshow1, .slideshow2, .slideshow3 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    width: inherit;
+    height: inherit;
+    background-color: white;
+    transition: opacity 0.5s;
+}
+
+.slideshow1 img, .slideshow2 img, .slideshow3 img {
+    width: 100%;
+    height: inherit;
+    object-fit: cover;
+}
+
+.slideshow1, .slideshow2, .slideshow3 {
+    opacity: 1;
+}
+
+div.slider:target {
+    opacity: 1;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: #2081c3;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+.why-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.why-grid p {
+    font-family: Montserrat, Helvetica, sans-serif;
+    margin-top: 10%;
+    grid-column: 1/3;
+    grid-row: 1/3;
+    margin: 6% 10% 6% 20%;
+}
+.subtitle_why {
+    color: #2081c3;
+    text-align: left;
+    margin: 2.4% 20% 20% 20%;
+    grid-row: 1/2;
+    grid-column: 1/3;
+}
+.text1 {
+    text-align: left;
+    margin: 20px 30px 30px 140px; 
 }
 
 .icon {
     width: 50px;
     padding-top: 10px;
 }
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: #bed8d4;
+    color: #2081c3;
+    padding: 20px 30px 20px 80px;
+    margin-top: 20px;
+    margin: center;
+    box-shadow: 0px 0px 10px #6f7364;
+}
+
 footer p {
     color: #2081c3;
     font-size: 1.2em;
@@ -146,22 +329,8 @@ footer p {
 }
 footer p a:hover {
     text-decoration: underline;
-
-}
-footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-color: #bed8d4;
-    color: #2081c3;
-    padding: 20px 30px 20px 80px;
-    margin-top: 10px;
-    margin-left: 200px;
-    box-shadow: 0px 0px 10px #6f7364;
 }
 
-footer .contact {
-    justify-items: center;
-}
 
 footer a {
     color: #2081c3;
@@ -170,19 +339,19 @@ footer a {
 
 footer .social {
     padding-top: 10px;
+    grid-column: 4/5;
+    margin-left: 25%;
 }
 footer .owner {
-    grid-column: 1/2;
-    margin-left: 20%;
+    grid-column: 2/3;
 }
 footer .link {
-    grid-column: 2/3;
-    margin-left: 30%;
+    grid-column: 3/4;
+    margin-left: 40%;
 }
 
 .tw, .fb, .inst {
-    width: 10%;
-    grid-column: 3/4;
+    width: 14%;
     margin-left: 8%;
 
 }
@@ -199,6 +368,8 @@ footer .link {
     background-color: #bed8d4;
     transform: scale(1.4)
 }
+
+
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
