--- a/askus/styles/styles.css
+++ b/askus/styles/styles.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Rubik&display=swap');
 
 body {
-    font-family: Rubik(--paragraph-font);
+    font-family: Rubik, Helvetica, sans-serif;
     font-size: 16px;
     color: var(--accent3-color);
 }
 
 h2, h3, h4, h5, h6 {
-    font-family: Montserrat(--heading-font);
+    font-family: Montserrat, Helvetica, sans-serif;
     font-weight: 700;
 }
 
 h1 {
-    font-family: Montserrat(--heading-font);
+    font-family: Montserrat, Helvetica, sans-serif;
     font-size: 1.5em;
 }
 
@@ -318,7 +318,6 @@ footer {
     color: #2081c3;
     padding: 20px 30px 20px 80px;
     margin-top: 20px;
-    margin: center;
     box-shadow: 0px 0px 10px #6f7364;
 }
 
@@ -344,10 +343,11 @@ footer .social {
 }
 footer .owner {
     grid-column: 2/3;
+    margin-left: -10%;
 }
 footer .link {
     grid-column: 3/4;
-    margin-left: 40%;
+    margin-left: 30%;
 }
 
 .tw, .fb, .inst {
