--- a/askus/styles/styles.css
+++ b/askus/styles/styles.css
@@ -321,7 +321,7 @@ div.slider:target {
 }
 
 .subtitleus {
-    font-family: Montserrat, Helvetica, sans-serif;
+    font-family: Rubik, Helvetica, sans-serif;
     font-size: 2em;
     color: #2081c3;
     text-align: right;
@@ -331,24 +331,27 @@ div.slider:target {
 }
 
 .left-img1 {
-    border: 6px solid #2081c3;
-    width: 50%;
+    border: 8px solid #bed8d4;
+    width: 60%;
     box-shadow: 5px 5px 10px #464655;
-    margin: 16% 4% 6% 40%;
+    margin: 12% 4% 6% 34%;
     grid-column: 1/3;
     grid-row: 1/2;
 }
 
 .right-img {
-    border: 4px solid #2081c3;
-    width: 50%;
+    border: 8px solid #bed8d4;
+    width: 60%;
     box-shadow: 5px 5px 10px #464655;
     grid-column: 3/5;
     grid-row: 2/3;
-    margin: 10% 20% 4% 30%;
+    margin: 4% 50% 2% 20%;
 }
 
 .textus1 {
+    color: #2081c3;
+    font-family: Montserrat, Helvetica, sans-serif;;
+    font-size: 18px;
     text-align: left;
     margin: 24% 18% 6% 6%;
     grid-column: 3/5;
@@ -356,8 +359,11 @@ div.slider:target {
 }
 
 .textus2 {
+    color: #2081c3;
+    font-family: Montserrat, Helvetica, sans-serif;;
+    font-size: 18px;
     text-align: right;
-    margin: 10% 22% 4% 30%;
+    margin: 8% 28% 4% 24%;
     grid-column: 1/4;
     grid-row: 2/3;
     
