--- a/askus/styles/styles.css
+++ b/askus/styles/styles.css
@@ -138,17 +138,17 @@ h4, h5, h6 {
 }
 
 .reading {
-    border: 6px solid #78d5d7;
+    border: 10px solid #78d5d7;
     width: 120%;
     box-shadow: 5px 5px 10px #2081c3;
     border: 40px 40px;
-    margin: 14% 10% 14% 30%;    
+    margin: 20% 10% 14% 30%;    
 }
 
 .reading-pic {
     font-family: Montserrat, Helvetica, sans-serif;
     grid-column: 2/4;
-    margin: 10% 6% 5% 25%;
+    margin: 6% 6% 5% 25%;
 }
 .subtitle {
     color: #2081c3;
@@ -176,35 +176,18 @@ h4, h5, h6 {
     padding: 30px;
 }
 
-.slider {
-    position: relative;
-    width: 1000px;
-    height: 530px;
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
 
-.slideshow1, .slideshow2, .slideshow3 {
-    position: absolute;
-    left: 0;
-    top: 0;
-    opacity: 0;
-    width: inherit;
-    height: inherit;
-    background-color: white;
-    transition: opacity 0.5s;
-}
-
-.slideshow1 img, .slideshow2 img, .slideshow3 img {
-    width: 100%;
-    height: inherit;
-    object-fit: cover;
-}
-
-.slideshow1, .slideshow2, .slideshow3 {
-    opacity: 1;
-}
-
-div.slider:target {
-    opacity: 1;
+/* Hide the images by default */
+.mySlides {
+  display: none;
 }
 
 /* Next & previous buttons */
@@ -267,7 +250,7 @@ div.slider:target {
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: #2081c3;
 }
 
 /* Fading animation */
@@ -281,10 +264,12 @@ div.slider:target {
   to {opacity: 1}
 }
 
+
 .why-grid {
     display: grid;
     background-color: #f2f2f2;
-    padding: 2% 0% 0% 0%;
+    margin-top: 2%;
+    padding: 3% 0% 0% 0%;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
 }
@@ -304,6 +289,7 @@ div.slider:target {
     grid-column: 1/3;
 }
 .text1 {
+    font-size: 20px;
     text-align: left;
     margin: 20px 30px 30px 140px; 
 }
@@ -351,9 +337,9 @@ div.slider:target {
 .textus1 {
     color: #2081c3;
     font-family: Montserrat, Helvetica, sans-serif;;
-    font-size: 18px;
+    font-size: 20px;
     text-align: left;
-    margin: 24% 18% 6% 6%;
+    margin: 20% 18% 6% 6%;
     grid-column: 3/5;
     grid-row: 1/2;
 }
@@ -361,9 +347,9 @@ div.slider:target {
 .textus2 {
     color: #2081c3;
     font-family: Montserrat, Helvetica, sans-serif;;
-    font-size: 18px;
+    font-size: 20px;
     text-align: right;
-    margin: 8% 28% 4% 24%;
+    margin: 6% 28% 4% 24%;
     grid-column: 1/4;
     grid-row: 2/3;
     
