--- a/askus/styles/styles.css
+++ b/askus/styles/styles.css
@@ -25,6 +25,9 @@ h4, h5, h6 {
 }
 
 .sidenav {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     height: 100%; 
     width: 220px; 
     position: fixed; 
@@ -52,15 +55,32 @@ h4, h5, h6 {
   }
   
   .sidenav a {
-    padding: 6px 8px 6px 16px;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding: 6px 8px 16px 16px;
     text-decoration: none;
     font-family: Rubik, Helvetica, sans-serif;
     font-size: 25px;
     color: #f7f9f9;
     display: block;
   }
+
+  .index {
+    grid-row: 1/2;
+    margin: 0% 10% 10% 8%;
+  }
+
+  .why {
+    grid-row: 2/3;
+    margin: 20% 10% 10% 8%;
+  }
+
+  .us {
+    grid-row: 2/3;
+    margin: 40% 10% 10% 8%;
+  }
   
-  .sidenav a:hover {
+  .index, .why, .us, .sidenav a:hover {
     color: #63d2ff;
     transform: scale(1.05)
   }
